<resources>
    <string name="app_name">Avaliacao 1</string>

    <!--    Toasts-->
    <string name="feature_not_implemented_toast">Desculpe! Essa funcionalidade ainda não foi implementada</string>
    <string name="app_requires_permission">Este aplicativo necessita que a permissão seja concedida para funcionar apropriadamente</string>

    <string name="app_title">Map Tracker</string>

    <!--    Screens-->
    <string name="tela_inicial">Tela Inicial</string>
    <string name="tela_configuracao">Configurações</string>
    <string name="tela_navegacao">Navegação</string>
    <string name="tela_historico">Histórico</string>
    <string name="tela_informacoes_gnss">Informações</string>
    <string name="tela_creditos">Créditos</string>


    <!--    Buttons-->
    <string name="configuracao_button">Configurações</string>
    <string name="navegacao_button">Navegação</string>
    <string name="historico_button">Histórico</string>
    <string name="informacoes_gnss_button">Informações</string>
    <string name="creditos_button">Créditos</string>
    <string name="salvar_preferencias_button">Salvar Preferências</string>
    <string name="limpar_preferencias_button">Limpar Preferências</string>


    <!--    Configuration Screen-->

    <!--    Geographic Coordinates-->
    <string name="coordenadas_formato_escolha_texto">Coordenadas geográficas:</string>

    <string name="grau_decimal">Grau decimal</string>
    <string name="grau_minuto_decimal">Grau-Minuto decimal</string>
    <string name="grau_minuto_segundo_decimal">Grau-Minuto-Segundo decimal</string>

    <!--    Velocity-->
    <string name="unidade_velocidade_texto">Unidade velocidade:</string>
    <string name="quilometro_hora">Km/h (quilometro por hora)</string>
    <string name="milhas_hora">Mph (milhas por hora)</string>

    <!--    Map Orientation-->
    <string name="orientacao_mapa_texto">Orientação do Mapa:</string>
    <string name="nenhuma_orientacao_mapa">Nenhuma</string>
    <string name="north_up_orientacao_mapa">North Up</string>
    <string name="course_up_orientacao_mapa">Course Up</string>

    <!--    Map Type-->
    <string name="tipo_mapa_texto">Tipo do Mapa:</string>
    <string name="vetorial_tipo_mapa">Vetorial</string>
    <string name="satelite_tipo_mapa">Imagem de Satélite</string>

    <!--    Transit Information-->
    <string name="informacoes_trafego_texto">Informações de Tráfego:</string>
    <string name="informacoes_trafego_ligado">Ligado</string>
    <string name="informacoes_trafego_desligado">Desligado</string>

    <!--    Navegation Screen-->
    <string name="barra_status_titulo">Dados de Localização</string>
    <string name="current_latitude_label">Latitude: </string>
    <string name="current_longitude_label">Longitude: </string>
    <string name="current_speed">Velocidade: </string>
    <string name="velocicade_nao_disponivel">Velocidade não disponível</string>

    <!--    Credit Screen-->
    <string name="credito_desenvolvedor">Desenvolvedor:</string>
    <string name="nome_laila">Laila R. H. de Campos</string>
    <string name="versao_android_title">Versão do Android:</string>
    <string name="versao_android_content">%1$s</string>
    <string name="versao_sdk_title">SDK:</string>
    <string name="versao_sdk_content">%1$d</string>
    <string name="versao_app">Versão do Aplicativo:</string>
    <string name="versao_app_number">0.1.0</string>
    <string name="app_description">Este aplicativo tem como finalidade possibilitar ao usuário a visualização de sua posição em tempo real e a apresentação de um histórico do seu posicionamento ao longo do tempo. As opções de vizualização são configuráveis e é possível acessar informações referentes ao sistema de posicionamento por satélites</string>

<!--    Historic Screen-->
    <string name="clear_historic">Limpar Histórico</string>

<!--    Database related strings-->
    <string name="add_to_database_success">Lista adicionada ao banco de dados com sucesso</string>
    <string name="add_to_database_failure">Erro ao adicionar lista ao banco de dados</string>

    <string name="title_activity_maps">MapsActivity</string>

</resources>